# ark-r1cs-extras

./: Cargo.toml  README.md
crypto-gadgets/: Cargo.toml  README.md
crypto-gadgets/src/: lib.rs
crypto-gadgets/src/crh/: poseidon.rs
crypto-gadgets/src/curve/: convert.rs  lookup.rs  mod.rs  scalar_mul.rs
crypto-gadgets/src/examples/: constraint_bench.rs
crypto-gadgets/src/poseidon_parameters/: mod.rs  parameters_bn124.rs  parameters_bn183.rs  parameters_bn254.rs  parameters_ed181.rs  parameters_ed58.rs  parameters_ed61.rs  parameters_ed97.rs  tests.rs
crypto-gadgets/src/signature/: constraints.rs  mod.rs
crypto-gadgets/src/signature/eddsa/: mod.rs
crypto-gadgets/src/signature/eddsa/constraints/: bowe_hopwood.rs  mod.rs  poseidon.rs
crypto-gadgets/src/signature/schnorr/: mod.rs  wrapped.rs
crypto-gadgets/src/signature/schnorr/constraints/: bowe_hopwood.rs  mod.rs  poseidon.rs
tools/: Cargo.toml  README.md
tools/src/: lib.rs  r1cs_profile.rs
