[workspace]
members = [
    "crypto-gadgets",
    "tools",
]

resolver = "2"

[workspace.package]
version = "0.5.1"
license = "MIT/Apache-2.0"
authors = [ "arkworks contributors"]
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
