[package]
name = "ark-r1cs-tools"
version.workspace = true
authors.workspace = true
description = "R1CS tools"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license.workspace = true
edition.workspace = true

[dependencies]
ark-relations = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
colored = { version = "2", optional = true }

[dev-dependencies]
ark-r1cs-std = { version = "0.5.0", default-features = false }
ark-bn254 = {version = "0.5.0", default-features = false, features = ["scalar_field"] }

[features]
default = ["std"]
std = [ "ark-relations/std", "ark-std/std"]
r1cs-profile = ["std", "colored"]

